-付加情報リビルド時にタグ情報テーブルも再生成するようにしました。
-ツリー編集画面で項目編集中にツリー内の別の場所をクリックしたら編集を終了するようにしました。
-記事一覧を nofollow から外しロボットに検索させるようにしました。((検索エンジンにサイト内のすべての記事を見つけてもらいやすくするための措置です。サイトマップの代わり。))
-デザイン編集で必須要素が消えないように対策しました。((本来は起こりえないのですが、不具合発生時のセーフティとして対策しました。))
-ボタンのデザインがブラウザによりまちまちなので、最低限CSSで指定するようにしました。
-【テーマ】satsuki2のマルチサイドバー表示時のサイドバーの幅を可変にしました。
-【fix】nature-dark テーマを選ぶとエラーが表示される。
-【fix】シンタックハイライトで言語「c」を指定するとセンタリングされてしまう。（[http://test.blog.abk.nu/02829:Thanks to tester]）v
-【fix】[http://adiary.org/v3man/install2/:#conf:trust_mode設定時]、スマホメニューの設定で項目が出てこない。（[https://twitter.com/dentacs/status/636828022612463616:Thanks to tono]）
-【fix】コンテンツ一覧画面で右クリックからリンクを開いた時記事が表示されない。
-【fix】PostgreSQL/MySQL運用時、タグ一覧からのタグ編集がうまく行かない。((DB_pg/DB_mysqlにおいて、条件節において空の配列を指定したときの動作が正しくない不具合の修正。))
-【fix】サイドバーモジュールのタイトルがリンクであるとき、一部テーマで文字が読みにくい。
-他


*Ver3.0 RC1 : 2015/07/22

-[bf:テーマが12種類に増えました。]((今回の更新で大半の時間を要しました。協力者求むだったのですが、結局一人作業になりましてとても疲れました（苦笑）。なんかいいテーマできたらどんどん公開してください。))
-[http://adiary.org/devman/theme/:テーマ開発マニュアル]をまとめました。
-Facebook OGP/Twitter Cardsに対応しました。((デバッグが十分ではないので他の方にお任せ。なお通常ブラウザアクセス時はOGP等を出力しないようになっています。))
-アップグレード処理が必要な時、自動的にメンテナンスモードに変更するようにしました。
-ログイン時のIP/HOST制限機能が付きました。
-コメント欄のロボットSPAM対策を強化しました。((JavaScriptを解釈するロボットSPAMが出たとしても大丈夫だと思います。不可能ではないものの、かなり投稿しにくくなっています。))
-コメント欄でタブや空白が有効になりました。{{&amp;}}等の実体参照が無効になりました。
-コメント本文の加工処理をJavaScript側に変更しました。
-コンテンツタイプで検索できるようになりました。
-タグなし記事を検索できるようになりました。
-タグや記事タイトル中の{{&}}をエスケープするようにしました。
-検索のデフォルトを「全文」に変更しました。
-記事一覧とコメント一覧画面でソートできるようになりました。
-記事一覧画面に記事種類を出力するようにしました。（[http://adiary.blog.abk.nu/0366#com:Thanks to 手石]）
-最近の記事一覧と過去ログに、コンテンツを含めない設定を追加しました。（Thanks to 手石）
-印刷用リンクを別ページで開く設定ができるようにしました。（Thanks to 手石）
-コメント欄に{{&gt;}}等の実体参照文字列を書き込んだ時、そのまま表示されるように変更しました。（Thanks to 手石）
-[g:respond.js]から[g:css3-mediaqueries.js]に変更しました。
-シンタックスハイライトのテーマを変更しました。またhighlight.jsのロード方法も変更しました。
-記法タグでの「google」や「wikipedia」のリンク先をhttpsに変更しました。GoogleのリンクQueryも少し変更しました。
-はてなブックマーク等のソーシャルボタンの表示を高速化しました。
-【テーマ】配色カスタマイズ画面で、色を濃くしたり明るくしたりできるようにしました。((色を薄くまたは暗くしかできなかったという（苦笑）))