@@ -487,7 +487,9 @@ sub regist_article {
 		# 許可タグ以外の除去処理
 		my $escape = $self->load_tag_escaper( 'article' );
 		$text   = $escape->escape($text);
-		# $text_s = $escape->escape($text_s);
+		if ($text_s) {
+			$text_s = $escape->escape($text_s);
+		}
 
 		# 値保存
 		$art{_text}  = $_text;	# parse 前のテキスト
